/*
  Licensed to the Apache Software Foundation (ASF) under one or more
  contributor license agreements.  See the NOTICE file distributed with
  this work for additional information regarding copyright ownership.
  The ASF licenses this file to You under the Apache License, Version 2.0
  (the "License"); you may not use this file except in compliance with
  the License.  You may obtain a copy of the License at
  
      http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 */

syntax = "proto2";
package org.apache.servicecomb.foundation.protobuf.internal.model;

message Root {
  optional int32 int32 = 1;
  optional int64 int64 = 2;
  optional uint32 uint32 = 3;
  optional uint64 uint64 = 4;
  optional sint32 sint32 = 5;
  optional sint64 sint64 = 6;
  optional fixed32 fixed32 = 7;
  optional fixed64 fixed64 = 8;
  optional sfixed32 sfixed32 = 9;
  optional sfixed64 sfixed64 = 10;
  optional float floatValue = 11;
  optional double doubleValue = 12;
  optional bool bool = 13;
  optional string string = 14;
  optional bytes bytes = 15;
  optional Color color = 16;

  optional User user = 17;

  repeated string sList = 20;
  repeated User pList = 21;
}
enum Color {
  RED = 0;
  YELLOW = 1;
  BLUE = 2;
}

message User {
  optional string name = 1;
}